on buttons page there is no longer overflow hidden

--- a/public/interests/websites/sites.css
+++ b/public/interests/websites/sites.css
@@ -162,6 +162,7 @@ header .box, .box, .app img, .app div {
 	width: 100%;
 	margin-bottom: 10px;
 	max-width: 700px;
+	overflow: visible !important;
 	clip-path: none;
 }
 .box::before {content: none;}
